# Secure-Auth-API

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  run.py  wsgi.py
.github/workflows/: lint-and-commit.yml
app/core/: app_factory.py  config.py
app/core/docs/: api.py
app/core/security/: jwt_tools.py  password.py  rbac.py
app/modules/auth/: models.py  routes.py  schemas.py  service.py
app/modules/quests/: models.py  routes.py  schemas.py  service.py
app/modules/users/: models.py  routes.py  schemas.py  service.py
data/: secure_auth_api.db
migrations/: env.py
migrations/versions/: 1b42b6391024_init.py  2c676838dfb9_add_quests.py  39373e4afdb2_add_revoked_tokens.py
