[project]
name = "secure-auth-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MaxFallishe", email = "n13b@inbox.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-migrate>=4.1.0",
    "flask-smorest>=0.46.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "hatchling>=1.28.0",
    "marshmallow>=4.1.0",
    "marshmallow-sqlalchemy>=1.4.2",
    "passlib[argon2,bcrypt]>=1.7.4",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.8",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
secure-auth-api = "secure_auth_api:main"
